fix word-wrap

--- a/src/pages/Post/AnswerSection/AnswerItem/AnswerItem.styles.scss
+++ b/src/pages/Post/AnswerSection/AnswerItem/AnswerItem.styles.scss
@@ -48,6 +48,7 @@
             font-size: 1.4em;
             margin-bottom: 5px;
             font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+            word-wrap: break-word;
             p {
                 clear: both;
                 margin-bottom: 15px;
