--- a/src/pages/Post/QuestionSection/PostCell/PostCell.styles.scss
+++ b/src/pages/Post/QuestionSection/PostCell/PostCell.styles.scss
@@ -15,6 +15,7 @@
         font-size: 1.4em;
         line-height: 1.3;
         font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
+        word-wrap: break-word;
         color: #2c91b3 !important;
     }
     .post-tags {
